--- a/angular/angular-template/src/app/employee/employee-create/employee-create.component.css
+++ b/angular/angular-template/src/app/employee/employee-create/employee-create.component.css
@@ -260,3 +260,17 @@ footer{
 
 .copyright{line-height:1;font-size:.8rem}body.sidebar-toggled footer.sticky-footer{width:100%}
 
+.spinnerStyle{
+  height: 100%;
+  width: 100%;
+  background-color:rgba(0, 0, 0, 0.286);
+  z-index:    10;
+  top:        1px;
+  left:       1px;
+  position:   fixed;
+}
+.spinner-trontron{
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 300px;
+}
