--- a/angular/angular-template/src/app/cage/cage-create/cage-create.component.css
+++ b/angular/angular-template/src/app/cage/cage-create/cage-create.component.css
@@ -39,6 +39,10 @@ footer{
   border-radius: 5px;
   background: #66c992;
 }
+.col-form-label{
+  width: 150px;
+  text-align: right;
+}
 /*!
  * Start Bootstrap - SB Admin 2 v4.1.3 (https://startbootstrap.com/theme/sb-admin-2)
  * Copyright 2013-2021 Start Bootstrap
