--- a/angular/angular-template/src/app/cage/cage-edit/cage-edit.component.html
+++ b/angular/angular-template/src/app/cage/cage-edit/cage-edit.component.html
@@ -46,7 +46,7 @@
         <div class="container-fluid">
 
           <div class="form-group row">
-            <label  class="col-form-label ml-3"  style="width: 130px;">Mã chuồng nuôi<span class="text-danger">*</span></label>
+            <label  class="col-form-label ml-3" >Mã chuồng nuôi<span class="text-danger">*</span></label>
             <div class="col-sm-8">
               <div class="input-group mb-3">
                 <input class="form-control" formControlName="cageId" type="text" disabled (change)="preventEdit()" >
@@ -59,7 +59,7 @@
           </div>
 
           <div class="form-group row">
-            <label  class="col-form-label ml-3" style="width: 130px;">Mã nhân viên<span class="text-danger">*</span></label>
+            <label  class="col-form-label ml-3">Mã nhân viên<span class="text-danger">*</span></label>
             <div class="col-sm-8">
               <div class="input-group mb-3">
                 <input class="form-control" formControlName="employeeId" type="text" disabled (change)="preventEdit()">
@@ -75,20 +75,20 @@
           </div>
 
           <div class="form-group row">
-            <label  class="col-form-label ml-3" style="width: 130px;">Ngày tạo chuồng<span class="text-danger">*</span></label>
+            <label  class="col-form-label ml-3" >Ngày tạo chuồng<span class="text-danger">*</span></label>
             <div class="col-sm-8">
               <div class="input-append date" data-date-format="dd-mm-yyyy">
                 <input class="span2 form-control" size="16" formControlName="createdDate" type="date" disabled (change)="preventEdit()">
               </div>
 
               <div >
-                <div style="color: red" *ngIf="formGroup.controls.createdDate.hasError('required') && formGroup.get('createdDate').touched">
-                  Vui lòng nhập ngày tạo chuồng.
-                </div>
+<!--                <div style="color: red" *ngIf="formGroup.controls.createdDate.hasError('required') && formGroup.get('createdDate').touched">-->
+<!--                  Vui lòng nhập ngày tạo chuồng.-->
+<!--                </div>-->
 
-                <div style="color: red" *ngIf="formGroup.controls.createdDate.hasError('flag') && formGroup.get('createdDate').touched">
-                  Ngày tạo chuồng không được nhỏ hơn ngày hiện tại.
-                </div>
+<!--                <div style="color: red" *ngIf="formGroup.controls.createdDate.hasError('flag') && formGroup.get('createdDate').touched">-->
+<!--                  Ngày tạo chuồng không được nhỏ hơn ngày hiện tại.-->
+<!--                </div>-->
 
                 <span style="color: red" *ngIf="wasEdit==true">Trường này không cho phép chỉnh sửa!</span>
               </div>
@@ -97,7 +97,7 @@
           </div>
 
           <div class="form-group row">
-            <label  class="col-form-label ml-3" style="width: 130px;">Ngày đóng chuồng<span class="text-danger">*</span></label>
+            <label  class="col-form-label ml-3" >Ngày đóng chuồng<span class="text-danger">*</span></label>
             <div class="col-sm-8">
               <div class="input-append date" id="dp3" data-date-format="dd-mm-yyyy">
                 <input class="span2 form-control" size="16" formControlName="closedDate" type="date">
@@ -107,10 +107,6 @@
                 <div style="color: red" *ngIf="formGroup.controls.closedDate.hasError('required') && formGroup.get('closedDate').touched ">
                   Vui lòng nhập ngày đóng chuồng.
                 </div>
-
-                <!--                <div style="color: red" *ngIf="formGroup.controls.closedDate.hasError('flag') && formGroup.get('closedDate').touched">-->
-                <!--                  Ngày đóng chuồng không được nhỏ hơn ngày tạo chuồng.-->
-                <!--                </div>-->
 
                 <div style="color: red" *ngIf="formGroup.hasError('flag') && formGroup.touched ">
                   Ngày đóng chuồng không được nhỏ hơn ngày tạo chuồng.
@@ -123,10 +119,10 @@
 
 
           <div class="form-group row">
-            <label  class="col-form-label ml-3" style="width: 130px;">Số lượng cá thể<span class="text-danger">*</span></label>
+            <label  class="col-form-label ml-3" >Số lượng cá thể<span class="text-danger">*</span></label>
             <div class="col-sm-8">
               <div class="input-group mb-3">
-                <input  class="form-control" type="number" formControlName="quantity">
+                <input  class="form-control" type="number" formControlName="quantity" onkeydown="javascript: return ['Backspace','Delete','ArrowLeft','ArrowRight'].includes(event.code) ? true : !isNaN(Number(event.key)) && event.code!=='Space'">
                 <div class="input-group-append">
                   <span class="input-group-text" id="basic-addon2">cá thể</span>
                 </div>
