--- a/angular/angular-template/src/app/sercurity/verify-password/verify-password.component.html
+++ b/angular/angular-template/src/app/sercurity/verify-password/verify-password.component.html
@@ -15,12 +15,16 @@
                 <input type="password" formControlName="newPassword" class="o3-form-control o3-input-lg"
                        id="new_password">
                 <!--              validate-->
-                <div class="error-place">
-                  <div *ngFor="let validation of validation_messages.password">
-                    <small class="text-danger"
-                           *ngIf="formGroup.get('newPassword').hasError(validation.type) && (formGroup.get('newPassword').touched )">
-                      {{validation.message}}</small>
-                  </div>
+                <div >
+                    <div style="color: red" *ngIf="formGroup.controls.newPassword.hasError('required') && formGroup.get('newPassword').touched">
+                      Trường này không được để trống!
+                    </div>
+                    <div style="color: red" *ngIf="formGroup.controls.newPassword.hasError('minlength') && formGroup.get('newPassword').touched">
+                      Mật khẩu phải chứa ít nhất 8 ký tự.
+                    </div>
+                    <div style="color: red" *ngIf="formGroup.controls.newPassword.hasError('maxlength') && formGroup.get('newPassword').touched">
+                      Mật khẩu không quá 32 ký tự
+                    </div>
                 </div>
               </div>
 
@@ -29,11 +33,15 @@
                 <input type="password" formControlName="confirmNewPassword" class="o3-form-control o3-input-lg"
                        id="confirm_password">
                 <!--              validate-->
-                <div class="error-place">
-                  <div *ngFor="let validation of validation_messages.password">
-                    <small class="text-danger"
-                           *ngIf="formGroup.get('confirmNewPassword').hasError(validation.type) && (formGroup.get('confirmNewPassword').touched )">
-                      {{validation.message}}</small>
+                <div >
+                  <div style="color: red" *ngIf="formGroup.controls.newPassword.hasError('required') && formGroup.get('newPassword').touched">
+                    Trường này không được để trống!
+                  </div>
+                  <div style="color: red" *ngIf="formGroup.controls.newPassword.hasError('minlength') && formGroup.get('newPassword').touched">
+                    Mật khẩu phải chứa ít nhất 8 ký tự.
+                  </div>
+                  <div style="color: red" *ngIf="formGroup.controls.newPassword.hasError('maxlength') && formGroup.get('newPassword').touched">
+                    Mật khẩu không quá 32 ký tự
                   </div>
                 </div>
               </div>
