--- a/angular/angular-template/src/app/cage/cage-history/cage-history.component.html
+++ b/angular/angular-template/src/app/cage/cage-history/cage-history.component.html
@@ -6,28 +6,27 @@
         </button>
       </div>
 
-
-        <div class="modal-body" *ngIf="logList !== null">
-          <table class="table">
-            <thead>
-            <tr>
-              <th scope="col" style="width:15%">Chuồng nuôi</th>
-              <th scope="col" style="width:15%">Ngày chỉnh sửa</th>
-              <th scope="col" style="width:50%">Nội dung chỉnh sửa</th>
-              <th scope="col" style="width:20%">Nhân viên chỉnh sửa</th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr *ngFor="let log of logList">
-              <td class="text-center">{{log.cageId}}</td>
-              <td class="text-center" >{{log.editDate|date:"dd/MM/yyy"}}</td>
-              <td >{{log.editedFields}}</td>
-              <td class="text-center">{{log.employeeId}}</td>
-            </tr>
-            </tbody>
-          </table>
-        </div>
-
+          <div class="modal-body" *ngIf="logList !== null">
+            <table class="table">
+              <thead class="thead-light">
+              <tr>
+                <th scope="col" style="width:15%">Chuồng nuôi</th>
+                <th scope="col" style="width:15%">Ngày chỉnh sửa</th>
+                <th scope="col" class="text-center" style="width:50%">Nội dung chỉnh sửa</th>
+                <th scope="col" style="width:20%">Nhân viên chỉnh sửa</th>
+              </tr>
+              </thead>
+              <tbody>
+              <tr *ngFor="let log of logList">
+                <td class="text-center">{{log.cageId}}</td>
+                <td class="text-center" >{{log.editDate|date:"dd/MM/yyy"}}</td>
+                <td >
+                  {{log.editedFields|contentPipe}}
+                </td>
+                <td >{{log.employeeId}}</td>
+              </tbody>
+            </table>
+          </div>
 
 
       <div class="modal-footer">
