--- a/angular/angular-template/src/app/new/new-details/new-details.component.css
+++ b/angular/angular-template/src/app/new/new-details/new-details.component.css
@@ -33,9 +33,27 @@
     background-color: black;
     color: white;
   }
+  .btn-outline-cancel{
+    background-color: #000000;
+  
+    border-radius: 0;
+  }
+  .btn-outline-cancel:hover{
+    background-color: rgb(255, 191, 191);
+    color: white;
+  }
   .img-user-login{
     width:50px;
     height: 50px;
     object-fit:cover;
     border-radius: 50%;
+  }
+  .delete-comment-btn{
+    background-color: transparent;
+    border: none;
+    float: right;
+    font-weight: lighter;
+  }
+  #cancel-edit{
+    cursor: pointer;
   }
