--- a/angular/angular-template/src/app/employee/employee-delete/employee-delete.component.html
+++ b/angular/angular-template/src/app/employee/employee-delete/employee-delete.component.html
@@ -10,7 +10,7 @@
 </div>
 <div class="modal-body" *ngIf="employee !== null" >
   <p>Bạn có chắc muốn xóa nhân viên {{employee.employeeName}} </p>
-  <h6>(Hành động này sẽ không thể hoàn tác)</h6>
+  <h6 style="color: red">(Hành động này sẽ không thể hoàn tác)</h6>
 </div>
 
 <div class="modal-footer">
